setup/k8s/media/02-ingress/03-plex-header-mask.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: plex-local-mask
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: "192.168.2.1"
      X-Real-IP: "192.168.2.1"
