setup/k8s/media/02-ingress/03-www-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: www-redirect
  namespace: media
spec:
  redirectRegex:
    regex: "^https?://www\\.(.*)"
    replacement: "https://${1}"
    permanent: true
