setup/k8s/media/02-ingress/05-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: www-redirect
  namespace: media
spec:
  redirectRegex:
    regex: "^https://www.(.*)"
    replacement: "https://${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-pages
  namespace: ingress-traefik-media
spec:
  errors:
    status:
      - "400"
      - "402-403"
      - "404-599"
    query: "/{status}.html"
    service:
      name: custom-error-pages
      namespace: media
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: plex-local-mask
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Plex-Client-Identifier: "external-proxy"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gzip
  namespace: ingress-traefik-media
spec:
  compress:
    includedContentTypes:
      - "text/html"
      - "text/css"
      - "text/plain"
      - "text/javascript"
      - "text/xml"
      - "application/json"
      - "application/javascript"
      - "application/xml"
      - "application/xhtml+xml"
      - "application/rss+xml"
      - "application/atom+xml"
      - "image/svg+xml"
    minResponseBodyBytes: 1024
