setup/k8s/media/02-ingress/03-wan-cert-controller.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wan-wildcard-cert-controller
  namespace: media
spec:
  entryPoints:
    - websecure-wan
    - websecure
  routes:
    - match: Host(`${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: default-backend-external
          port: 80
  tls:
    secretName: wan-wildcard-tls
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend-external
  namespace: media
spec:
  type: ExternalName
  externalName: default-backend.infra.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
