setup/k8s/media/02-ingress/04-catchall.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-catchall
  namespace: media
spec:
  entryPoints:
    - web
    - web-external
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: custom-error-pages
          port: 80
